--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -150,24 +150,24 @@
                                                             </constraints>
                                                         </imageView>
                                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ERw-1S-ImA">
-                                                            <rect key="frame" x="73.999999999999986" y="0.0" width="244.66666666666663" height="74"/>
+                                                            <rect key="frame" x="74" y="0.0" width="245" height="74"/>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="40E-cB-Ugq">
-                                                                <size key="itemSize" width="97" height="86.333333333333329"/>
+                                                                <size key="itemSize" width="65" height="66"/>
                                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                                 <inset key="sectionInset" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                             </collectionViewFlowLayout>
                                                             <cells>
                                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PreviewCell" id="EHF-cG-IAl" customClass="PreviewCell" customModule="spriteMaker" customModuleProvider="target">
-                                                                    <rect key="frame" x="10" y="-6" width="97" height="86.333333333333329"/>
+                                                                    <rect key="frame" x="10" y="4" width="65" height="66"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1Qn-oJ-qZr">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="97" height="86.333333333333329"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="65" height="66"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <subviews>
                                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wJx-rh-3tY">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="97" height="86.333333333333329"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="65" height="66"/>
                                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             </imageView>
                                                                         </subviews>
@@ -179,7 +179,7 @@
                                                                         </constraints>
                                                                     </collectionViewCellContentView>
                                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
-                                                                    <size key="customSize" width="97" height="86.333333333333329"/>
+                                                                    <size key="customSize" width="65" height="66"/>
                                                                     <connections>
                                                                         <outlet property="previewCell" destination="1Qn-oJ-qZr" id="77N-aa-Jwb"/>
                                                                         <outlet property="previewImage" destination="wJx-rh-3tY" id="avY-aA-Int"/>
@@ -192,7 +192,7 @@
                                                             </connections>
                                                         </collectionView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdH-ep-VsO">
-                                                            <rect key="frame" x="318.66666666666669" y="0.0" width="22.333333333333314" height="74"/>
+                                                            <rect key="frame" x="319" y="0.0" width="22" height="74"/>
                                                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <state key="normal" image="plus" catalog="system">
@@ -266,15 +266,6 @@
                                             <outlet property="superView" destination="bVc-0N-N98" id="OgL-3S-qzw"/>
                                         </connections>
                                     </collectionViewCell>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="tZq-vo-ag5">
-                                        <rect key="frame" x="0.0" y="237" width="351" height="128"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wHs-Ad-Q3R">
-                                            <rect key="frame" x="0.0" y="0.0" width="351" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                        <color key="backgroundColor" systemColor="systemTealColor"/>
-                                    </collectionViewCell>
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="qNM-u1-XmX" id="GaF-tq-aiT"/>
@@ -299,7 +290,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kXR-UD-exs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-113" y="931"/>
+            <point key="canvasLocation" x="-113.07692307692307" y="930.56872037914684"/>
         </scene>
     </scenes>
     <resources>
