--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -280,51 +280,24 @@
                                                             </constraints>
                                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                                                         </imageView>
-                                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fJF-HQ-axH">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZQN-8i-t4e">
+                                                            <rect key="frame" x="0.0" y="-25" width="104" height="104"/>
+                                                            <connections>
+                                                                <action selector="tappedCurrentColor:" destination="P97-ZI-Imn" eventType="touchUpInside" id="EW0-BX-WGl"/>
+                                                            </connections>
+                                                        </button>
+                                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fJF-HQ-axH">
                                                             <rect key="frame" x="114" y="0.0" width="207" height="59"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="0.0" id="8BW-qX-BSQ">
                                                                 <size key="itemSize" width="34" height="33"/>
-                                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                                <size key="headerReferenceSize" width="50" height="50"/>
                                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                                <inset key="sectionInset" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                             </collectionViewFlowLayout>
                                                             <cells>
-                                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AddColorCell" id="Lma-NQ-lCW" customClass="AddColorCell" customModule="spriteMaker" customModuleProvider="target">
-                                                                    <rect key="frame" x="0.0" y="13" width="34" height="33"/>
-                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                    <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="EQQ-hA-hms">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="34" height="33"/>
-                                                                        <autoresizingMask key="autoresizingMask"/>
-                                                                        <subviews>
-                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TZy-Na-l6n">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="34" height="33"/>
-                                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                            </view>
-                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZi-34-3Xo">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="34" height="33"/>
-                                                                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                <state key="normal" image="plus" catalog="system"/>
-                                                                            </button>
-                                                                        </subviews>
-                                                                        <constraints>
-                                                                            <constraint firstItem="TZy-Na-l6n" firstAttribute="top" secondItem="EQQ-hA-hms" secondAttribute="top" id="1e7-Pg-iPv"/>
-                                                                            <constraint firstItem="qZi-34-3Xo" firstAttribute="top" secondItem="EQQ-hA-hms" secondAttribute="top" id="3bf-BX-UTb"/>
-                                                                            <constraint firstAttribute="bottom" secondItem="qZi-34-3Xo" secondAttribute="bottom" id="4iP-6k-Vd6"/>
-                                                                            <constraint firstAttribute="bottom" secondItem="TZy-Na-l6n" secondAttribute="bottom" id="4tC-fy-gx6"/>
-                                                                            <constraint firstAttribute="trailing" secondItem="TZy-Na-l6n" secondAttribute="trailing" id="Gul-6n-JJt"/>
-                                                                            <constraint firstItem="TZy-Na-l6n" firstAttribute="leading" secondItem="EQQ-hA-hms" secondAttribute="leading" id="a6n-BS-7oi"/>
-                                                                            <constraint firstAttribute="trailing" secondItem="qZi-34-3Xo" secondAttribute="trailing" id="d8m-oV-g0g"/>
-                                                                            <constraint firstItem="qZi-34-3Xo" firstAttribute="leading" secondItem="EQQ-hA-hms" secondAttribute="leading" id="k6U-kN-iSa"/>
-                                                                        </constraints>
-                                                                    </collectionViewCellContentView>
-                                                                    <size key="customSize" width="34" height="33"/>
-                                                                    <connections>
-                                                                        <outlet property="addColorView" destination="TZy-Na-l6n" id="Tfq-St-9Xj"/>
-                                                                    </connections>
-                                                                </collectionViewCell>
                                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="ColorCell" id="hNK-HY-uDY" customClass="ColorCell" customModule="spriteMaker" customModuleProvider="target">
-                                                                    <rect key="frame" x="39" y="13" width="34" height="33"/>
+                                                                    <rect key="frame" x="55" y="13" width="34" height="33"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8gq-sL-PxM">
                                                                         <rect key="frame" x="0.0" y="0.0" width="34" height="33"/>
@@ -347,6 +320,27 @@
                                                                     </connections>
                                                                 </collectionViewCell>
                                                             </cells>
+                                                            <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="ColorPickerHeader" id="zLA-wC-BKj" customClass="ColorPickerHeader" customModule="spriteMaker" customModuleProvider="target">
+                                                                <rect key="frame" x="0.0" y="0.0" width="50" height="59"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZi-34-3Xo">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="59"/>
+                                                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <state key="normal" image="plus" catalog="system"/>
+                                                                        <connections>
+                                                                            <action selector="addColorButton:" destination="P97-ZI-Imn" eventType="touchUpInside" id="cS1-9S-AqO"/>
+                                                                        </connections>
+                                                                    </button>
+                                                                </subviews>
+                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstItem="qZi-34-3Xo" firstAttribute="top" secondItem="zLA-wC-BKj" secondAttribute="top" id="S2d-DS-uy0"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="qZi-34-3Xo" secondAttribute="bottom" id="egl-GO-X9b"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="qZi-34-3Xo" secondAttribute="trailing" id="g4i-E4-4ci"/>
+                                                                    <constraint firstItem="qZi-34-3Xo" firstAttribute="leading" secondItem="zLA-wC-BKj" secondAttribute="leading" id="vXC-Ez-Gg1"/>
+                                                                </constraints>
+                                                            </collectionReusableView>
                                                             <connections>
                                                                 <outlet property="dataSource" destination="P97-ZI-Imn" id="rpH-EP-b0v"/>
                                                                 <outlet property="delegate" destination="P97-ZI-Imn" id="1au-m8-ujs"/>
@@ -404,16 +398,20 @@
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstItem="mp3-fR-hZf" firstAttribute="leading" secondItem="bVc-0N-N98" secondAttribute="leading" id="1cR-Mf-mX9"/>
+                                                        <constraint firstItem="ZQN-8i-t4e" firstAttribute="trailing" secondItem="mp3-fR-hZf" secondAttribute="trailing" id="8Kl-gb-UAL"/>
                                                         <constraint firstItem="fJF-HQ-axH" firstAttribute="leading" secondItem="mp3-fR-hZf" secondAttribute="trailing" constant="10" id="CS5-yu-oSZ"/>
                                                         <constraint firstItem="zYR-jp-EH0" firstAttribute="leading" secondItem="mp3-fR-hZf" secondAttribute="trailing" constant="10" id="G8R-cE-RGt"/>
                                                         <constraint firstItem="653-DD-e8A" firstAttribute="leading" secondItem="fJF-HQ-axH" secondAttribute="trailing" id="NjJ-t3-pSF"/>
                                                         <constraint firstItem="zYR-jp-EH0" firstAttribute="top" secondItem="fJF-HQ-axH" secondAttribute="bottom" constant="5" id="Nnk-0J-nEf"/>
+                                                        <constraint firstItem="ZQN-8i-t4e" firstAttribute="leading" secondItem="mp3-fR-hZf" secondAttribute="leading" id="SB9-ab-cb4"/>
                                                         <constraint firstAttribute="bottom" secondItem="mp3-fR-hZf" secondAttribute="bottom" id="WvM-gF-yBN"/>
                                                         <constraint firstItem="fJF-HQ-axH" firstAttribute="top" secondItem="bVc-0N-N98" secondAttribute="top" id="X5L-Rn-R8O"/>
                                                         <constraint firstAttribute="trailing" secondItem="653-DD-e8A" secondAttribute="trailing" id="ea5-e3-7c0"/>
                                                         <constraint firstAttribute="bottom" secondItem="zYR-jp-EH0" secondAttribute="bottom" id="hur-Xg-Ugs"/>
                                                         <constraint firstItem="mp3-fR-hZf" firstAttribute="top" secondItem="bVc-0N-N98" secondAttribute="top" constant="-25" id="iVG-WK-UGp"/>
+                                                        <constraint firstItem="ZQN-8i-t4e" firstAttribute="bottom" secondItem="mp3-fR-hZf" secondAttribute="bottom" id="kNQ-PV-jPI"/>
                                                         <constraint firstAttribute="trailing" secondItem="zYR-jp-EH0" secondAttribute="trailing" id="kQm-ct-n50"/>
+                                                        <constraint firstItem="ZQN-8i-t4e" firstAttribute="top" secondItem="mp3-fR-hZf" secondAttribute="top" id="sGN-5s-llV"/>
                                                         <constraint firstItem="zYR-jp-EH0" firstAttribute="top" secondItem="653-DD-e8A" secondAttribute="bottom" constant="5" id="tu7-6H-4QL"/>
                                                         <constraint firstItem="653-DD-e8A" firstAttribute="top" secondItem="bVc-0N-N98" secondAttribute="top" id="weH-iN-o5z"/>
                                                     </constraints>
@@ -430,6 +428,7 @@
                                         <size key="customSize" width="351" height="114"/>
                                         <connections>
                                             <outlet property="colorCollectionList" destination="fJF-HQ-axH" id="aDm-rc-94j"/>
+                                            <outlet property="colorPickerButton" destination="ZQN-8i-t4e" id="y79-nv-7tY"/>
                                             <outlet property="currentColor" destination="mp3-fR-hZf" id="hbq-zr-7pT"/>
                                             <outlet property="superView" destination="bVc-0N-N98" id="JxC-Ao-fWy"/>
                                         </connections>
