--- a/spriteMaker/spriteMaker/AnimatedPreviewPopupViewController.storyboard
+++ b/spriteMaker/spriteMaker/AnimatedPreviewPopupViewController.storyboard
@@ -20,10 +20,10 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rmc-2h-XTw">
-                                        <rect key="frame" x="20.5" y="86" width="373" height="74.5"/>
+                                        <rect key="frame" x="20.5" y="86" width="373" height="112"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dC9-Aa-H7T">
-                                                <rect key="frame" x="5" y="0.0" width="74.5" height="74.5"/>
+                                                <rect key="frame" x="5" y="5" width="102" height="102"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="dC9-Aa-H7T" secondAttribute="height" multiplier="1:1" id="UWN-bi-asy"/>
@@ -32,21 +32,21 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="dC9-Aa-H7T" secondAttribute="bottom" id="060-Ik-h7p"/>
-                                            <constraint firstItem="dC9-Aa-H7T" firstAttribute="top" secondItem="Rmc-2h-XTw" secondAttribute="top" id="FpI-FY-v1B"/>
-                                            <constraint firstAttribute="width" secondItem="Rmc-2h-XTw" secondAttribute="height" multiplier="5:1" id="S0N-Ae-di9"/>
+                                            <constraint firstAttribute="bottom" secondItem="dC9-Aa-H7T" secondAttribute="bottom" constant="5" id="060-Ik-h7p"/>
+                                            <constraint firstItem="dC9-Aa-H7T" firstAttribute="top" secondItem="Rmc-2h-XTw" secondAttribute="top" constant="5" id="FpI-FY-v1B"/>
+                                            <constraint firstAttribute="width" secondItem="Rmc-2h-XTw" secondAttribute="height" multiplier="10:3" id="S0N-Ae-di9"/>
                                             <constraint firstItem="dC9-Aa-H7T" firstAttribute="leading" secondItem="Rmc-2h-XTw" secondAttribute="leading" constant="5" id="wuF-ki-Lnl"/>
                                         </constraints>
                                     </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.up.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="KG4-lX-fZz">
-                                        <rect key="frame" x="53" y="162.5" width="20" height="16"/>
+                                        <rect key="frame" x="66.5" y="195" width="20" height="26"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="GsN-gG-CS5"/>
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jxw-K6-M5b">
-                                        <rect key="frame" x="25.5" y="180.5" width="149" height="223.5"/>
+                                        <rect key="frame" x="25.5" y="223" width="149" height="223.5"/>
                                         <subviews>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="V81-g5-gZ6">
                                                 <rect key="frame" x="10" y="35" width="129" height="178.5"/>
@@ -146,8 +146,9 @@
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstItem="Rmc-2h-XTw" firstAttribute="centerX" secondItem="Qrw-vm-1bE" secondAttribute="centerX" id="RbD-hA-b93"/>
+                                    <constraint firstItem="KG4-lX-fZz" firstAttribute="top" secondItem="dC9-Aa-H7T" secondAttribute="bottom" id="aSn-Lh-3EN"/>
                                     <constraint firstItem="Jxw-K6-M5b" firstAttribute="top" secondItem="KG4-lX-fZz" secondAttribute="bottom" id="bpp-ac-7RC"/>
-                                    <constraint firstItem="KG4-lX-fZz" firstAttribute="top" secondItem="dC9-Aa-H7T" secondAttribute="bottom" id="gUd-NO-7cK"/>
+                                    <constraint firstItem="Jxw-K6-M5b" firstAttribute="top" secondItem="Rmc-2h-XTw" secondAttribute="bottom" constant="25" id="eW5-vf-aNa"/>
                                     <constraint firstItem="Rmc-2h-XTw" firstAttribute="width" secondItem="Qrw-vm-1bE" secondAttribute="width" multiplier="0.9" id="pD0-mt-Tqg"/>
                                     <constraint firstItem="Rmc-2h-XTw" firstAttribute="top" secondItem="Qrw-vm-1bE" secondAttribute="top" priority="250" constant="86" id="qVF-mv-ocL"/>
                                     <constraint firstItem="Jxw-K6-M5b" firstAttribute="width" secondItem="Rmc-2h-XTw" secondAttribute="width" multiplier="0.4" id="w5b-Uh-PCu"/>
