--- a/spriteMaker/spriteMaker/PreviewPopup.storyboard
+++ b/spriteMaker/spriteMaker/PreviewPopup.storyboard
@@ -22,22 +22,33 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nwz-Yx-OTy">
-                                        <rect key="frame" x="20.5" y="40" width="373" height="74.5"/>
+                                        <rect key="frame" x="20.5" y="40" width="373" height="112"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R66-Y6-yGp">
+                                                <rect key="frame" x="5" y="5" width="102" height="102"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="R66-Y6-yGp" secondAttribute="height" multiplier="1:1" id="4yg-rS-jTC"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="Nwz-Yx-OTy" secondAttribute="height" multiplier="5:1" id="LfX-hu-EY0"/>
+                                            <constraint firstItem="R66-Y6-yGp" firstAttribute="top" secondItem="Nwz-Yx-OTy" secondAttribute="top" constant="5" id="BPL-gY-Oo3"/>
+                                            <constraint firstAttribute="width" secondItem="Nwz-Yx-OTy" secondAttribute="height" multiplier="10:3" id="LfX-hu-EY0"/>
+                                            <constraint firstAttribute="bottom" secondItem="R66-Y6-yGp" secondAttribute="bottom" constant="5" id="azN-kf-lCn"/>
+                                            <constraint firstItem="R66-Y6-yGp" firstAttribute="leading" secondItem="Nwz-Yx-OTy" secondAttribute="leading" constant="5" id="eKh-Ro-daG"/>
                                         </constraints>
                                     </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.up.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Qsp-01-NVs">
-                                        <rect key="frame" x="0.0" y="116" width="20" height="27"/>
+                                        <rect key="frame" x="0.0" y="149" width="20" height="26"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="9sE-Nb-JuU"/>
                                         </constraints>
-                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="10"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jX2-T8-wwM">
-                                        <rect key="frame" x="30" y="144.5" width="354" height="194"/>
+                                        <rect key="frame" x="30" y="177" width="354" height="197.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDV-n0-Hdw">
                                                 <rect key="frame" x="315.5" y="10" width="28.5" height="28.5"/>
@@ -50,13 +61,13 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="frame number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCR-xp-wyb">
-                                                <rect key="frame" x="101.5" y="9.5" width="151" height="30"/>
+                                                <rect key="frame" x="101.5" y="9" width="151" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Vp-sX-txV">
-                                                <rect key="frame" x="0.0" y="144" width="354" height="50"/>
+                                                <rect key="frame" x="0.0" y="147.5" width="354" height="50"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VuU-2w-d4H">
                                                         <rect key="frame" x="102" y="0.0" width="150" height="50"/>
@@ -83,7 +94,7 @@
                                                 </constraints>
                                             </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AgH-Yw-NGp">
-                                                <rect key="frame" x="0.0" y="54.5" width="354" height="74.5"/>
+                                                <rect key="frame" x="0.0" y="54" width="354" height="78.5"/>
                                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RU2-gf-nRq">
                                                     <size key="itemSize" width="140" height="104"/>
@@ -93,7 +104,7 @@
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCell" id="w9g-hs-kWV" customClass="CategoryCell" customModule="spriteMaker" customModuleProvider="target">
-                                                        <rect key="frame" x="10" y="-15" width="140" height="104"/>
+                                                        <rect key="frame" x="10" y="-13" width="140" height="104"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="XJM-7I-ZUn">
                                                             <rect key="frame" x="0.0" y="0.0" width="140" height="104"/>
@@ -146,13 +157,13 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                                 <constraints>
+                                    <constraint firstItem="Qsp-01-NVs" firstAttribute="top" secondItem="R66-Y6-yGp" secondAttribute="bottom" id="2ev-6y-SeO"/>
                                     <constraint firstItem="Nwz-Yx-OTy" firstAttribute="width" secondItem="RuB-sn-PwS" secondAttribute="width" multiplier="0.9" id="3MM-Kf-y7u"/>
-                                    <constraint firstItem="Qsp-01-NVs" firstAttribute="top" secondItem="Nwz-Yx-OTy" secondAttribute="bottom" id="Dv1-BN-lWc"/>
                                     <constraint firstItem="jX2-T8-wwM" firstAttribute="top" secondItem="Qsp-01-NVs" secondAttribute="bottom" id="I9y-zD-V0G"/>
                                     <constraint firstItem="Qsp-01-NVs" firstAttribute="leading" secondItem="RuB-sn-PwS" secondAttribute="leading" priority="250" id="MAV-f1-mGP"/>
                                     <constraint firstItem="jX2-T8-wwM" firstAttribute="leading" secondItem="RuB-sn-PwS" secondAttribute="leading" constant="30" id="NRF-4c-WSK"/>
-                                    <constraint firstItem="AgH-Yw-NGp" firstAttribute="height" secondItem="Nwz-Yx-OTy" secondAttribute="height" id="Ykd-Jn-Zgl"/>
-                                    <constraint firstItem="jX2-T8-wwM" firstAttribute="top" secondItem="Nwz-Yx-OTy" secondAttribute="bottom" constant="30" id="r2G-kf-5rb"/>
+                                    <constraint firstItem="AgH-Yw-NGp" firstAttribute="height" secondItem="Nwz-Yx-OTy" secondAttribute="height" multiplier="0.7" id="Ykd-Jn-Zgl"/>
+                                    <constraint firstItem="jX2-T8-wwM" firstAttribute="top" secondItem="Nwz-Yx-OTy" secondAttribute="bottom" constant="25" id="r2G-kf-5rb"/>
                                     <constraint firstItem="Nwz-Yx-OTy" firstAttribute="centerX" secondItem="RuB-sn-PwS" secondAttribute="centerX" id="tBw-wL-rCU"/>
                                     <constraint firstAttribute="trailing" secondItem="jX2-T8-wwM" secondAttribute="trailing" constant="30" id="uqN-FB-vOw"/>
                                     <constraint firstItem="jX2-T8-wwM" firstAttribute="centerX" secondItem="RuB-sn-PwS" secondAttribute="centerX" id="vDn-5N-WZK"/>
